# Bank1

./: .flake8  .gitignore  README.md  decorators.py  main.py  mylog.txt  pyproject.toml  report.html
Bank/: README.md  pyproject.toml
Bank/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_date_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_widget_py.html
Bank/src/: processing.py  widget.py
Bank/tests/: test_generators.py  test_masks.py  test_processing.py
generators/: __init__.py  generators.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_date_py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_widget_py.html  z_9165f3aabcb6a098___init___py.html  z_9165f3aabcb6a098_entities_py.html  z_9165f3aabcb6a098_parser_py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_bbde10ff578790c4___init___py.html
src/: date.py  decorators.py  external_api.py  file_readers.py  logging_config.py  main.py  masks.py  processing.py  search.py  transactions_loader.py  utils.py  widget.py
src/src/: masks.py  processing.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_processing.py  test_transactions_loader.py  test_utils.py  test_widget.py
tests/tests/: confitest.py  test_masks.py  test_processing.py  test_widget.py
