[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
[tool.mypy]

disallow_untyped_defs = true # запрещает определение функций без аннотаций типов
no_implicit_optional = true # запрещает использование None в качестве   если тип параметра не объявлен как Optional
warn_return_any = true # включает предупреждения, когда функция возвращает тип Any
exclude = 'venv' # исключает директорию виртуального окружения из проверки

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)